# public-data-etl-pipeline

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
etl/: __init__.py  cli.py  config.py  factory.py  logging_setup.py  pipeline.py  report.py  schemas.py
etl/loaders/: __init__.py  base.py  csv_loader.py  parquet_loader.py  sqlite_loader.py
etl/quality/: __init__.py  checker.py
etl/sources/: __init__.py  base.py  sales.py  traffic.py  weather.py
etl/transformers/: __init__.py  base.py  sales.py  traffic.py  weather.py
site/: index.html  report.html
templates/: report.html.j2
tests/: conftest.py  test_cli.py  test_loaders.py  test_pipeline.py  test_quality.py  test_sources.py  test_transformers.py
