[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "public-data-etl-pipeline"
version = "0.1.0"
description = "A clean, OO ETL pipeline for public/synthetic datasets (weather, traffic, sales)."
authors = [{ name = "Seyyid Sahin", email = "seyyidsahin2834@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "SQLAlchemy>=2.0",
  "pydantic>=2.6",
  "Faker>=24.0",
  "rich>=13.7",
  "typer>=0.12",
  "plotly>=5.20",
  "jinja2>=3.1",
  "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1", "pytest-cov>=5.0"]

[project.scripts]
etl = "etl.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["etl*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
